Update api get all blogs
