# app/Models/Blog.php
@@ -2,15 +2,20 @@
 
 namespace App\Models;
 
+use App\Contracts\Model\Searchable;
+use App\Supports\Model\Filterable;
+use App\Supports\Model\HasSlug;
+use Illuminate\Database\Eloquent\Builder;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use Illuminate\Database\Eloquent\Relations\BelongsToMany;
-use Illuminate\Database\Eloquent\Relations\MorphOne;
 
-class Blog extends Model
+class Blog extends Model implements Searchable
 {
     use HasFactory;
+    use HasSlug;
+    use Filterable;
 
     protected $fillable = [
         'title',
@@ -18,15 +23,11 @@ class Blog extends Model
         'content',
         'thumbnail_image',
         'cover_image',
+        'sort_order',
         'status',
         'creator_id',
         'updater_id'
     ];
-
-    public function slug(): MorphOne
-    {
-        return $this->morphOne(Slug::class, 'reference');;
-    }
 
     public function creator(): BelongsTo
     {
@@ -41,5 +42,10 @@ class Blog extends Model
     public function tags(): BelongsToMany
     {
         return $this->belongsToMany(Tag::class, 'blog_has_tags');
+    }
+
+    public function scopeSearch(Builder $query, string $value): Builder
+    {
+        return $query->whereFullText(['title', 'description', 'content'], $value);
     }
 }
